--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 body {
   font-family: "Roboto Slab", serif;
+  text-align: center;
 }
 
 /* header */
@@ -55,7 +56,7 @@ header h2 {
   justify-content: space-between;
   align-items: center;
   color: rgb(59, 51, 51);
-  padding: 0.5rem 0rem;
+  padding: 0.5rem 0rem 0.5rem 0rem;
 }
 .gallery-info a {
   color: gray;
@@ -67,7 +68,7 @@ header h2 {
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  padding: 2rem 0rem;
+  padding: 2rem 0rem 2rem 0rem;
   width: 80%;
   margin: auto;
   row-gap: 5rem;
@@ -103,12 +104,15 @@ header h2 {
 
 @media (max-width: 768px) {
   .gallery {
+    width: max-content;
     padding: 1rem 0rem;
+    margin: 0;
+    padding: 0;
   }
   .gallery-img img {
     max-width: 80vw;
   }
-  .gallery-info {
-    justify-content: space-around;
+  .more {
+    margin: 2rem;
   }
 }
