--- a/style.css
+++ b/style.css
@@ -103,13 +103,10 @@ header h2 {
 }
 
 @media (max-width: 768px) {
-  .gallery {
-    width: max-content;
-    padding: 1rem 0rem;
-    margin: 0;
-    padding: 0;
-  }
   .gallery-img img {
+    max-width: 80vw;
+  }
+  .gallery-info {
     max-width: 80vw;
   }
   .more {
